# cmpt415-gesture-recognition

./: .gitignore  README.md  people.py  recog.py  requirements.txt  stream.py
theta_streamer/: CMakeLists.txt
theta_streamer/src/: main.c
